remove padding to prevent home page scrolling on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -13,7 +13,7 @@
   justify-content: center;
   // Full height of page less nav height
   height: calc(100vh -  60px);
-  overflow: hidden;
+  padding: 0;
 
   > h1 {
     color: $white;
